Container flex column gap fix

--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1.5rem;
+  gap: 3rem;
 }
 
 .weapons__container {
